trunk/Archive2/ae/39409990c1fad7/output
main.cpp: In function 'int main()':
main.cpp:22:28: error: initializer fails to determine size of 'p'
  const char p[] = filename.name_;
                            ^
main.cpp:22:28: error: array must be initialized with a brace-enclosed initializer
